# PicoW_A2DP

./: CMakeLists.txt  Readme.md  a2dp_sink_demo.c  btstack_audio_pico.c  btstack_config.h  picow_bt_example_common.c
src/: a2dp.c  a2dp.h  avrcp.c  avrcp.h  bt.c  bt.h  btstack_audio_pico_i2s.c  main.c  sdp.c  sdp.h
